name:                matsmartare
version:             0.1.0.0
homepage:            https://github.com/WASDi/matsmartare
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable matsmartare
  hs-source-dirs:      src
  main-is:             Matsmartare.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    HDBC-sqlite3 == 2.3.3.1,
    HDBC,
    bytestring,
    containers,
    time,
    text,
    http-conduit,
    aeson >= 0.7 && < 1
