name:                matsmartare
version:             0.1.0.0
homepage:            https://github.com/WASDi/matsmartare
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable matsmartare
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    matsmartare

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    Matsmartare,
    InsertUpdateDbItem,
    Categories.CategoriesJson,
    Categories.ParseCategories,
    FetchDbItems,
    ParseWebItem,
    ParseWebRoutes,
    ParseDbItem,
    PriceChangeDetector,
    TextUtil,
    RawJson,
    FetchWebItems,
    Model,
    TimeUtil

  build-depends:
    base >= 4.7 && < 5,
    HDBC-sqlite3 == 2.3.3.1,
    HDBC,
    bytestring,
    containers,
    time,
    text,
    process,
    aeson >= 0.7 && < 1,
    unordered-containers,
    scientific

test-suite matsmartare-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  default-language: Haskell2010
  build-depends:
    base >=4.7 && <5,
    text,
    matsmartare
